Indexer is ~almost~ ready